fix: Size of book cover background img Background images of book covers fill the whole div and position theirself in the center of the div.

--- a/src/App.css
+++ b/src/App.css
@@ -165,10 +165,11 @@ body, .app {
 
 .book-cover {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  height: 200px;
-  width: 170px;
+  height: 100%;
+  width: 100%;
   background: #eee;
-  background-size: 100%, 200px;
+  background-size: cover;
+  background-position: center center;
 }
 .book-cover-title {
   padding: 20px 10px 0;
